--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/channel/UCrh1Mx5CTTbbkgW5O6iS2Tw/" />
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSdqcVijtxP2qtiwFtuS-NFBL9_Pnbf6WwiydLnzh4nbxQWy1Q/viewform" />
 </head>
 <body></body>
 </html>
