--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="https://www.deepdeyiitk.com/web/image/website/1/favicon?unique=e5fe8cd">
   <title>Human Verification • Secure Access</title>
   <link rel="stylesheet" href="style.css">
 </head>
