--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <script src="math.js"></script>
   <script src="dot.js"></script>
   <script src="slider.js"></script>
+  <script src="puzzle.js"></script>
 
   <!-- Page controller -->
   <script src="main.js"></script>
